--- a/inclure/header.html
+++ b/inclure/header.html
@@ -1,5 +1,5 @@
 <div class="block_content header">
-    <div id="logo"></div>
+    <div id="logo"><a href="#URL_SITE_SPIP"></a></div>
     <div id="header_right">
 
     <div id="slogan">USI, section montagne et escalade:<span>s'élever ensemble!</span></div>
