Ajout contenu dynamique sur sommaire

--- a/inclure/head.html
+++ b/inclure/head.html
@@ -12,6 +12,7 @@
 [<link rel="stylesheet" href="(#CHEMIN{css/layout.css}|direction_css)" type="text/css" />]
 [<link rel="stylesheet" href="(#CHEMIN{css/style.css}|direction_css)" type="text/css" />]
 [<link rel="stylesheet" href="(#CHEMIN{css/content.css}|direction_css)" type="text/css" />]
+[<link rel="stylesheet" href="(#CHEMIN{css/typo.css}|direction_css)" type="text/css" />]
 
 [(#REM) 2. Style SPIP et ses plugins ]
 #INSERT_HEAD_CSS
