Couleur cartouche article + typo.css

--- a/inclure/header.html
+++ b/inclure/header.html
@@ -5,19 +5,19 @@
     <div id="slogan">USI, section montagne et escalade:<span>s'élever ensemble!</span></div>
     <div id="activites" class="tableul">
         <ul>
-            <li><a href="#" class="act_alpinisme">
+            <li><a href="/spip.php?rubrique4" class="act_alpinisme">
                 <div class="txt">Alpinisme</div>
                 <div class="img"></div>
             </a></li>
-            <li><a href="#" class="act_escalade">
+            <li><a href="/spip.php?rubrique3" class="act_escalade">
                 <div class="txt">Escalade</div>
                 <div class="img"></div>
             </a></li>
-            <li><a href="#" class="act_randonnee">
+            <li><a href="/spip.php?rubrique" class="act_randonnee">
                 <div class="txt">Randonnée</div>
                 <div class="img"></div>
             </a></li>
-            <li><a href="#" class="act_skirando">
+            <li><a href="/spip.php?rubrique5" class="act_skirando">
                 <div class="txt">Ski</div>
                 <div class="img"></div>
             </a></li>
@@ -25,8 +25,8 @@
     </div><!-- activites -->
     <div id="permaliens" class="tableul transbg">
         <ul>
-            <li><a href="#">La section</a></li>
-            <li><a href="#">Infos pratiques</a></li>
+            <li><a href="/spip.php?rubrique2">La section</a></li>
+            <li><a href="/spip.php?article3">Infos pratiques</a></li>
             <li><a href="#">Participer</a></li>
             <li><input type="text" size="8"/><input type="submit" value="OK"/></li>
         </ul>
