--- a/inclure/header.html
+++ b/inclure/header.html
@@ -2,23 +2,23 @@
     <div id="logo"><a href="#URL_SITE_SPIP"></a></div>
     <div id="header_right">
 
-    <div id="slogan">USI, section montagne et escalade:<span>s'élever ensemble!</span></div>
+    <div id="slogan">USI Montagne Escalade : <span>s'élever ensemble!</span></div>
     <div id="activites" class="tableul">
         <ul>
             <li><a href="/spip.php?rubrique4" class="act_alpinisme">
-                <div class="txt">Alpinisme</div>
+                <div class="txt bg_alpinisme">Alpinisme</div>
                 <div class="img"></div>
             </a></li>
             <li><a href="/spip.php?rubrique3" class="act_escalade">
-                <div class="txt">Escalade</div>
+                <div class="txt bg_escalade">Escalade</div>
                 <div class="img"></div>
             </a></li>
-            <li><a href="/spip.php?rubrique" class="act_randonnee">
+            [(#REM)<li><a href="/spip.php?rubrique" class="act_randonnee">
                 <div class="txt">Randonnée</div>
                 <div class="img"></div>
-            </a></li>
+            </a></li>]
             <li><a href="/spip.php?rubrique5" class="act_skirando">
-                <div class="txt">Ski</div>
+                <div class="txt bg_hiver">Hiver</div>
                 <div class="img"></div>
             </a></li>
         </ul>
@@ -26,7 +26,7 @@
     <div id="permaliens" class="tableul transbg">
         <ul>
             <li><a href="/spip.php?rubrique2">La section</a></li>
-            <li><a href="/spip.php?article3">Infos pratiques</a></li>
+            <li><a href="/spip.php?article890">Infos pratiques</a></li>
             <li><a href="#">Participer</a></li>
             <li><input type="text" size="8"/><input type="submit" value="OK"/></li>
         </ul>
