--- a/rubrique.html
+++ b/rubrique.html
@@ -12,7 +12,7 @@
 <INCLURE{fond=inclure/head} />
 </head>
 
-<body>
+<body class="secteur#ID_SECTEUR">
 <div class="page_content">
 
         <INCLURE{fond=inclure/header}{home=oui} />
@@ -26,25 +26,36 @@
 		<div class="wrapper">
 		<div class="content" id="content">
 			<p class="arbo"><a href="#URL_SITE_SPIP/"><:accueil_site:></a><BOUCLE_ariane(HIERARCHIE){id_rubrique}> &gt; <a href="#URL_RUBRIQUE">[(#TITRE|couper{80})]</a></BOUCLE_ariane>[ &gt; <strong class="on">(#TITRE|couper{80})</strong>]</p><!--.arbo-->
-	
+
 			<div class="cartouche">
 				<h1 class="#EDIT{titre} surlignable">[(#LOGO_RUBRIQUE|image_reduire{40,*}) ]#TITRE</h1>
 			</div>
 	
 			[<div class="#EDIT{texte} texte surlignable">(#TEXTE|image_reduire{500,*})</div>]
+
+			[(#REM) Rubriques de la rubrique ]
+			<B_rubriques>
+			<div class="menu menu_rubriques">
+				<ul>
+					<BOUCLE_rubriques(RUBRIQUES) {id_parent} {!par date} {pagination}>
+					<li>
+						<strong><a href="#URL_RUBRIQUE">#TITRE</a></strong>
+					</li>
+					</BOUCLE_rubriques>
+				</ul>
+			</div>
+			</B_rubriques>
 	
 			[(#REM) Articles de la rubrique ]
 			<B_articles>
 			<div class="menu menu_articles">
-				#ANCRE_PAGINATION
 				<ul>
 					<BOUCLE_articles(ARTICLES) {id_rubrique} {!par date} {pagination}>
 					<li>
-						<strong><a href="#URL_ARTICLE">[(#LOGO_ARTICLE_RUBRIQUE|image_reduire{40,*}) ]#TITRE</a></strong>
+						<a href="#URL_ARTICLE">#TITRE</a>
 					</li>
 					</BOUCLE_articles>
 				</ul>
-				[<p class="pagination">(#PAGINATION)</p>]
 			</div>
 			</B_articles>
 	
@@ -58,56 +69,6 @@
 	
         <div class="aside transbg">	
 			<INCLURE{fond=inclure/navsub, id_rubrique} />
-			#FORMULAIRE_RECHERCHE
-			
-			[(#REM) Menu de navigation mots-cles ]
-			<B_mots>
-			<div class="menu">
-				<h2><:mots_clefs:></h2>
-				<ul>
-					<BOUCLE_mots(MOTS) {id_rubrique} {par titre}>
-					<li><a href="#URL_MOT" rel="tag">#TITRE</a></li>
-					</BOUCLE_mots>
-				</ul>
-			</div>
-			</B_mots>
-	
-			[(#REM) Breves du secteur ]
-			<B_breves>
-			<div class="menu menu_breves">
-				<h2><:breves:breves:></h2>
-				<ul>
-					<BOUCLE_breves(BREVES) {id_rubrique} {!par date} {0,5}>
-					<li>[(#DATE|affdate_jourcourt) &ndash; ]<a href="#URL_BREVE">#TITRE</a></li>
-					</BOUCLE_breves>
-				</ul>
-			</div>
-			</B_breves>
-	
-			[(#REM) Sites de la rubrique ]
-			<B_sites>
-			<div class="menu">
-				<h2><:sur_web:></h2>
-				<ul>
-					<BOUCLE_sites(SITES) {id_rubrique} {par nom_site}>
-					<li>
-						<a href="[(#ID_SYNDIC|generer_url_entite{site,'','',#CONNECT})]">#NOM_SITE</a>
-						<B_syndic>
-						<ul>
-							<BOUCLE_syndic(SYNDIC_ARTICLES) {id_syndic} {age<180} {!par date} {0,3}>
-							<li><a href="#URL_ARTICLE" class="spip_out">#TITRE</a></li>
-							</BOUCLE_syndic>
-						</ul>
-						</B_syndic>
-					</li>
-					</BOUCLE_sites>
-				</ul>
-			</div>
-			</B_sites>
-	
-			[(#REM) Proposer un site ]
-			#FORMULAIRE_SITE
-			
         </div><!-- aside -->
     </div><!-- main -->
     <div style="clear: both"></div>
