Header positionning & Top of page links

--- a/article.html
+++ b/article.html
@@ -14,7 +14,7 @@
 <INCLURE{fond=inclure/head} />
 </head>
 
-<body class="secteur#ID_SECTEUR">
+<body id="body" class="secteur#ID_SECTEUR">
 <div class="page_content">
 
         <INCLURE{fond=inclure/header}{home=oui} />
@@ -43,6 +43,7 @@
 	
 			[<div class="notes"><hr />(#NOTES)</div>]
 			
+            <span class="to_top"><a href="#body" title="Haut de page">&uarr;</a></span>
         </div><!--mcontent-->
 
         <div class="aside transbg">
