--- a/inclure/header.html
+++ b/inclure/header.html
@@ -28,7 +28,7 @@
             <li><a href="/spip.php?rubrique2">La section</a></li>
             <li><a href="/spip.php?article890">Infos pratiques</a></li>
             <li><a href="#">Participer</a></li>
-            <li><input type="text" size="8"/><input type="submit" value="OK"/></li>
+            <li class="recherche"><input type="text" size="8"/><input type="submit" value="OK"/></li>
         </ul>
     </div><!-- permaliens -->
 
