--- a/rubrique.html
+++ b/rubrique.html
@@ -65,6 +65,7 @@
 		</div><!--.content-->
 		</div><!--.wrapper-->
 
+        <span class="to_top"><a href="#body" title="Haut de page">&uarr;</a></span>
         </div><!--mcontent-->
 	
         <div class="aside transbg">	
