--- a/sommaire.html
+++ b/sommaire.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<div class="page_content">
+<div id="body" class="page_content">
 
 	<INCLURE{fond=inclure/header}{home=oui} />
 	
@@ -25,6 +25,7 @@
             #TEXTE
          </BOUCLE_actualites>
 
+        <span class="to_top"><a href="#body" title="Haut de page">&uarr;</a></span>
         </div><!--mcontent-->
 
         <div class="aside transbg">
