Cartouche from articles and home page

--- a/sommaire.html
+++ b/sommaire.html
@@ -21,6 +21,10 @@
     <div id="main">
         <div class="mcontent transbg">
 
+        <p class="arbo"><strong class="on">Accueil</strong></p>
+
+        <div class="cartouche"><h1>Actualités</h1></div>
+
          <BOUCLE_actualites(ARTICLES){id_article=1}>
             #TEXTE
          </BOUCLE_actualites>
