--- a/inclure/header.html
+++ b/inclure/header.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a href="/spip.php?rubrique2">La section</a></li>
             <li><a href="/spip.php?article890">Infos pratiques</a></li>
-            <li><a href="#">Participer</a></li>
+            <li><a href="/spip.php?article889">Participer</a></li>
             <li class="recherche"><input type="text" size="8"/><input type="submit" value="OK"/></li>
         </ul>
     </div><!-- permaliens -->
