--- a/inclure/header.html
+++ b/inclure/header.html
@@ -3,7 +3,7 @@
     <div id="header_right">
 
     <div id="slogan">USI Montagne Escalade : <span>s'élever ensemble!</span></div>
-    <div id="activites" class="tableul">
+    <div id="activites">
         <ul>
             <li><a href="/spip.php?rubrique4" class="act_alpinisme">
                 <div class="txt bg_alpinisme">Alpinisme</div>
