Footer border_bottom

--- a/inclure/footer.html
+++ b/inclure/footer.html
@@ -55,7 +55,7 @@
         </ul>
     </div>
     <div class="border_bottom">
-        &copy;2013-2014 Montagne Escalade USIVRY | Propulsé par Spip | RSS 2.0
+        <span class="red">&copy;2013-2014 Montagne Escalade USIVRY | Propulsé par Spip</span> | Plan du site | Se connecter | Contact | RSS 2.0
     </div>
 </div><!-- footer -->
 
