Sommaire cartouche background coloré

--- a/sommaire.html
+++ b/sommaire.html
@@ -23,7 +23,7 @@
 
         <p class="arbo"><strong class="on">Accueil</strong></p>
 
-        <div class="cartouche"><h1>Actualités</h1></div>
+        <div class="cartouche bg_section"><h1>Actualités</h1></div>
 
          <BOUCLE_actualites(ARTICLES){id_article=1}>
             #TEXTE
