--- a/inclure/footer.html
+++ b/inclure/footer.html
@@ -55,7 +55,11 @@
         </ul>
     </div>
     <div class="border_bottom">
-        <span class="red">&copy;2013-2014 Montagne Escalade USIVRY | Propulsé par Spip</span> | Plan du site | Se connecter | Contact | RSS 2.0
+        <span class="red">&copy;2013-2014 Montagne Escalade USIVRY | Propulsé par Spip</span>
+        | <a href="/spip.php?page=plan">Plan du site</a>
+        | <a href="/ecrire/">Se connecter</a>
+        | Contact
+        | <a href="/spip.php?page=backend">RSS 2.0</a>
     </div>
 </div><!-- footer -->
 
