Footer Contact link

--- a/inclure/footer.html
+++ b/inclure/footer.html
@@ -58,7 +58,7 @@
         <span class="red">&copy;2013-2014 Montagne Escalade USIVRY | Propulsé par Spip</span>
         | <a href="/spip.php?page=plan">Plan du site</a>
         | <a href="/ecrire/">Se connecter</a>
-        | Contact
+        | <a href="#URL_ARTICLE{886}">Contact</a>
         | <a href="/spip.php?page=backend">RSS 2.0</a>
     </div>
 </div><!-- footer -->
