--- a/404.html
+++ b/404.html
@@ -17,8 +17,7 @@
 
 	<INCLURE{fond=inclure/header} />
 
-<div class="block_content">	
-	<div id="main">
+<div id="main" class="block_content">
 		<div class="mcontent transbg">
 			<p class="arbo"><a href="#URL_SITE_SPIP/"><:accueil_site:></a> &gt; <strong class="on"><:pass_erreur:></strong></p>
 	
@@ -40,9 +39,8 @@
 		<div class="aside transbg">
 			<INCLURE{fond=inclure/navsub} />
 		</div><!--.aside-->
-	</div><!--main-->
     <div style="clear: both"></div>
-</div><!-- .bloc_content -->
+</div><!-- main -->
 
 	<INCLURE{fond=inclure/footer,self=#SELF} />
 
