--- a/article.html
+++ b/article.html
@@ -19,8 +19,7 @@
 
         <INCLURE{fond=inclure/header}{home=oui} />
         
-<div class="block_content">
-    <div id="main">
+<div id="main" class="block_content">
         <div class="mcontent transbg">
 
 		[(#REM) Contenu principal : contenu de l'article ]
@@ -49,9 +48,8 @@
         <div class="aside transbg">
 			<INCLURE{fond=inclure/navsub, id_rubrique} />
         </div><!-- aside -->
-    </div><!-- main -->
     <div style="clear: both"></div>
-</div><!-- .bloc_content -->
+</div><!-- main -->
 
         
         <INCLURE{fond=inclure/footer,self=#SELF} />
