--- a/inclure/header.html
+++ b/inclure/header.html
@@ -5,19 +5,15 @@
     <div id="slogan">USI Montagne Escalade : <span>s'élever ensemble!</span></div>
     <div id="activites">
         <ul>
-            <li><a href="/spip.php?rubrique4" class="act_alpinisme">
+            <li><a href="#URL_RUBRIQUE{4}" class="act_alpinisme">
                 <div class="txt bg_alpinisme">Alpinisme</div>
                 <div class="img"></div>
             </a></li>
-            <li><a href="/spip.php?rubrique3" class="act_escalade">
+            <li><a href="#URL_RUBRIQUE{3}" class="act_escalade">
                 <div class="txt bg_escalade">Escalade</div>
                 <div class="img"></div>
             </a></li>
-            [(#REM)<li><a href="/spip.php?rubrique" class="act_randonnee">
-                <div class="txt">Randonnée</div>
-                <div class="img"></div>
-            </a></li>]
-            <li><a href="/spip.php?rubrique5" class="act_skirando">
+            <li><a href="#URL_RUBRIQUE{5}" class="act_skirando">
                 <div class="txt bg_hiver">Hiver</div>
                 <div class="img"></div>
             </a></li>
@@ -25,9 +21,9 @@
     </div><!-- activites -->
     <div id="permaliens" class="tableul transbg">
         <ul>
-            <li><a href="/spip.php?rubrique2">La section</a></li>
-            <li><a href="/spip.php?article890">Infos pratiques</a></li>
-            <li><a href="/spip.php?article889">Participer</a></li>
+            <li><a href="#URL_RUBRIQUE{2}">La section</a></li>
+            <li><a href="#URL_ARTICLE{890}">Infos pratiques</a></li>
+            <li><a href="#URL_ARTICLE{889}">Participer</a></li>
             <li class="recherche">#FORMULAIRE_RECHERCHE</li>
         </ul>
     </div><!-- permaliens -->
