--- a/sommaire.html
+++ b/sommaire.html
@@ -17,8 +17,7 @@
 
 	<INCLURE{fond=inclure/header}{home=oui} />
 	
-<div class="block_content">
-    <div id="main">
+    <div id="main" class="block_content">
         <div class="mcontent transbg">
 
         <p class="arbo"><strong class="on">Accueil</strong></p>
@@ -35,7 +34,6 @@
         <div class="aside transbg">
             <INCLURE{fond=inclure/navsub}/>
         </div><!-- aside -->
-    </div><!-- main -->
     <div style="clear: both"></div>
 </div><!-- .bloc_content -->
 
