--- a/recherche.html
+++ b/recherche.html
@@ -16,8 +16,7 @@
 
 	<INCLURE{fond=inclure/header} />
 	
-<div class="block_content">
-    <div id="main">
+<div id="main" class="block_content">
         <div class="mcontent transbg">
 
 		[(#REM) Contenu principal : Resultats de la recherche ]
@@ -73,9 +72,8 @@
 		<div class="aside transbg">
 			<INCLURE{fond=inclure/navsub, id_rubrique} />
 		</div><!--.aside-->
-	</div><!--.main-->
     <div style="clear: both"></div>
-</div><!-- .bloc_content -->
+</div><!-- main -->
 
 	
 	<INCLURE{fond=inclure/footer,self=#SELF} />
