--- a/inclure/header.html
+++ b/inclure/header.html
@@ -1,4 +1,4 @@
-<div class="block_content header">
+<div id="header" class="block_content">
     <div id="logo"><a href="#URL_SITE_SPIP"></a></div>
     <div id="header_right">
 
