Added random background

--- a/404.html
+++ b/404.html
@@ -45,5 +45,6 @@
 	<INCLURE{fond=inclure/footer,self=#SELF} />
 
 </div><!--.page-->
+<script type="text/javascript" src="/squelettes/js/bg.js"></script>
 </body>
 </html>
