--- a/article.html
+++ b/article.html
@@ -55,6 +55,7 @@
         <INCLURE{fond=inclure/footer,self=#SELF} />
         
 </div><!--.page_content-->
+<script type="text/javascript" src="/squelettes/js/bg.js"></script>
 </body>
 </html>
 
