--- a/rubrique.html
+++ b/rubrique.html
@@ -79,6 +79,7 @@
         <INCLURE{fond=inclure/footer,self=#SELF} />
         
 </div><!--.page_content-->
+<script type="text/javascript" src="/squelettes/js/bg.js"></script>
 </body>
 </html>
 
