--- a/plan.html
+++ b/plan.html
@@ -40,5 +40,6 @@
 	<INCLURE{fond=inclure/footer,self=#SELF} />
 
 </div><!--.page_content-->
+<script type="text/javascript" src="/squelettes/js/bg.js"></script>
 </body>
 </html>
