--- a/rubrique.html
+++ b/rubrique.html
@@ -49,6 +49,7 @@
 			[(#REM) Articles de la rubrique ]
 			<B_articles>
 			<div class="menu menu_articles">
+                                #ANCRE_PAGINATION
 				<ul>
 					<BOUCLE_articles(ARTICLES) {id_rubrique} {!par date} {pagination}>
 					<li>
@@ -56,6 +57,7 @@
 					</li>
 					</BOUCLE_articles>
 				</ul>
+                                [<p class="pagination">(#PAGINATION)</p>]
 			</div>
 			</B_articles>
 	
